Attach FakeCrypto service to compose

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -66,21 +66,21 @@ services:
       - '55032:8081'
     volumes:
       - ./scripts:/https:ro
-  #crypto-grpc:
-  #  image: 'fakediiacrypto:0.0.1'
-  #  environment:
-  #  #- ASPNETCORE_URLS=https://+;http://+
-  #  #- ASPNETCORE_HTTPS_PORTS=5192
-  #  #- ASPNETCORE_URLS=https://+:5192;http://+
-  #  - ASPNETCORE_HTTPS_PORTS=8081
-  #  - ASPNETCORE_Kestrel__Certificates__Default__Password=12345678
-  #  - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
-  #  - Logging__LogLevel__Grpc=Debug
-  #  - Logging__LogLevel__Microsoft=Debug
-  #  ports:
-  #    - '5192:8081'
-  #  volumes:
-  #    - ./scripts:/https:ro
+  crypto-grpc:
+    image: 'fakediiacrypto:0.0.1'
+    environment:
+    #- ASPNETCORE_URLS=https://+;http://+
+    #- ASPNETCORE_HTTPS_PORTS=5192
+    #- ASPNETCORE_URLS=https://+:5192;http://+
+    - ASPNETCORE_HTTPS_PORTS=8081
+    - ASPNETCORE_Kestrel__Certificates__Default__Password=12345678
+    - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
+    - Logging__LogLevel__Grpc=Trace
+    - Logging__LogLevel__Microsoft=Trace
+    ports:
+      - '5192:8080'
+    volumes:
+      - ./scripts:/https:ro
 
 networks:
   mongo-network:
