Add zipkin to setup

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -63,8 +63,8 @@ APP_PORT=8080
 SWAGGER_IS_ENABLED=true
 SWAGGER_PATH=documentation
 
-ZIPKIN_IS_ENABLED=false
-ZIPKIN_URL=http://localhost:9411
+ZIPKIN_IS_ENABLED=true
+ZIPKIN_URL=http://zipkin:9411
 ZIPKIN_SEND_INTERVAL_SEC=5
 
 MINIO_IS_ENABLED=false
