--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -20,6 +20,10 @@ services:
       - '6379:6379'
     # networks:
     # - mongo-network
+  zipkin:
+    image: 'openzipkin/zipkin:latest'
+    ports:
+      - '9411:9411'
   rabbitmq:
     image: 'heidiks/rabbitmq-delayed-message-exchange'
     container_name: rabbitmq
